--- a/style/style.css
+++ b/style/style.css
@@ -14,10 +14,6 @@
 body {
   font-family: var(--ffroboto), sans-serif;
   color: var(--maincolor);
-  max-width: 1600px;
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 h1,
@@ -44,11 +40,9 @@ li {
 
 .header {
   border-bottom: 1px solid #ececec;
-
 }
 .header-inner {
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -72,18 +66,17 @@ li {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: var(--maincolor);  
+  color: var(--maincolor);
   display: inline-block;
   padding: 32px 0;
 }
 
-.navig-item:not(:last-child){
-   margin-right:  50px;
+.navig-item:not(:last-child) {
+  margin-right: 50px;
 }
 .navig {
   list-style-type: none;
   display: flex;
-  margin-right: 331px;
 }
 
 .contact {
@@ -93,6 +86,7 @@ li {
   line-height: 1.14;
   letter-spacing: 0.02em;
   display: flex;
+  margin-left: auto;
 }
 .contact_info {
   font-weight: 500;
@@ -104,8 +98,8 @@ li {
   display: inline-flex;
   padding: 32px 0 32px 0;
 }
-.contact-item:not(:last-child){
-   padding-right: 50px;
+.contact-item:not(:last-child) {
+  margin-right: 50px;
 }
 .navig_url:hover,
 .navig_url:focus,
@@ -119,12 +113,14 @@ li {
   display: flex;
   flex-direction: column;
 }
-.about-border {
+.hero {
   background-color: var(--bgcolor);
-  border-top: 1px solid #ececec;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  text-align: center;
 }
 
-.about-text {
+.hero-text {
   font-weight: 900;
   font-size: 44px;
   line-height: 1.36;
@@ -132,11 +128,10 @@ li {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: var(--logotext);
-  display: inline-block;
-  margin: 106px auto 30px auto;
+  margin: 0 auto 30px auto;
   width: 696px;
 }
-.about-button {
+.hero-button {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -151,18 +146,25 @@ li {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border: none;
   cursor: pointer;
-  margin: 0px auto 106px auto;
 }
-.about-button:hover {
+.hero-button:hover {
   background-color: var(--aboutbuttonhover);
   color: var(--bgcolor);
 }
-.about-button:focus {
+.hero-button:focus {
   background-color: var(--maincolor2);
 }
-
-.hide {
-  display: none;
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .info,
@@ -195,7 +197,7 @@ li {
 .info-title {
   font-weight: 400;
   font-size: 14px;
-  line-height: 2.18;
+  line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--infocolor);
 }
@@ -218,23 +220,21 @@ li {
   letter-spacing: 0.03em;
   margin-bottom: 50px;
 }
-section.team {
-  background-color: var(--buttonportfolio);
-}
+
 .team {
   background-color: var(--buttonportfolio);
-  border: 1px solid transparent;
-  box-sizing: border-box;
 }
-
+img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
 .teamphoto {
   display: flex;
   justify-content: space-between;
-  padding-bottom: 50px;
 }
 .photo {
   width: 270px;
-  height: 368px;
   background-color: var(--logotext);
   text-align: center;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -250,6 +250,12 @@ section.team {
   text-align: center;
   margin-bottom: 50px;
 }
+
+.team-info {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 .name {
   font-weight: 500;
   font-size: 16px;
@@ -257,7 +263,6 @@ section.team {
   letter-spacing: 0.03em;
   font-weight: 500;
   color: var(--maincolor);
-  margin-top: 30px;
   margin-bottom: 10px;
 }
 .position {
@@ -266,6 +271,9 @@ section.team {
   line-height: 1.18;
   letter-spacing: 0.03em;
   color: var(--infocolor);
+}
+.button-item:not(:last-child) {
+  margin-right: 8px;
 }
 .button {
   font-weight: 500;
@@ -277,18 +285,18 @@ section.team {
   border: none;
   border-radius: 4px;
   padding: 6px 22px 6px 22px;
-  margin: 8px;
 }
 .navigation {
   display: flex;
   justify-content: center;
   list-style-type: none;
-  padding-bottom: 34px;
+  margin-bottom: 50px;
 }
-.navigation-item_block {
-  width: 370px;
-  height: 404px;
-  border: 1px solid #eeeeee;
+.navigation-item-description {
+  padding: 20px 24px;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
+  border-bottom: 1px solid #eeeeee;
 }
 .navigation-item_block:nth-child(-n + 6) {
   margin-bottom: 30px;
@@ -304,8 +312,7 @@ section.team {
   font-size: 18px;
   line-height: 2;
   letter-spacing: 0.06em;
-  margin-top: 20px;
-  margin-left: 24px;
+  margin-bottom: 4px;
 }
 .navigation_item_group {
   font-weight: 400;
@@ -313,7 +320,6 @@ section.team {
   line-height: 1.87;
   letter-spacing: 0.03em;
   color: var(--infocolor);
-  margin-left: 24px;
 }
 .footer {
   background-color: var(--bgcolor);
